--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,10 @@
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
+.likes-box{
+    text-align: center;
+    margin-top: 3px;
+    width: 100px;
+    font-size: 30px;
+}
