--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,9 @@ body{
 
 .likes-box{
     text-align: center;
-    margin-top: 3px;
-    width: 100px;
-    font-size: 20px;
+    margin-top: 0;
+    width: 70px;
+    font-size: 15px;
     font-weight: bolder;
 }
 
@@ -58,4 +58,8 @@ body{
     right: 10px;
     width: 20px;
     height: 20px;
+}
+
+.modal-menu-item{
+    padding: 20px;
 }
