--- a/src/App.css
+++ b/src/App.css
@@ -27,13 +27,6 @@ body{
     z-index: 1;
 }
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
@@ -64,4 +57,11 @@ body{
 .modal-menu-item{
     padding: 20px;
     color: #a1a1a1;
+}
+
+.debate-heading{
+    color: black;
+    font-size: 20px;
+    width: 100%;
+    font-weight: bold;
 }
