--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,13 @@ body{
     z-index: 1;
 }
 
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
@@ -64,4 +71,8 @@ body{
     font-size: 20px;
     width: 100%;
     font-weight: bold;
+}
+
+.black{
+    color: black;
 }
